--- a/notes/CTF Notes/PicoCTF/2022/036 RPS.md
+++ b/notes/CTF Notes/PicoCTF/2022/036 RPS.md
@@ -40,19 +40,20 @@ bool play () {
 ```c
   if (strstr(player_turn, loses[computer_turn])) {
 ```
-#c 
+#c #strstr 
 
 Looking at the *strstr* manual.
 ```bash
-man ststr
+man strstr
 ```
-#man
+#man #strstr
 
 From the *man page*.
 ```
 The  strstr()  function  finds the first occurrence of the substring needle in the string haystack.  The terminating null bytes ('\0') are
        not compared.
 ```
+#strstr 
 
 So we can pass all the answers per answer and always win.
 ```
